<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".home.consultant.CompleteProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appcolor">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            app:tint="@color/white"
            android:src="@drawable/ic_baseline_arrow_back_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            style="@style/textHeading"
            android:layout_centerInParent="true"
            android:text="@string/profile"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            style="@style/textHeading"
            android:layout_marginHorizontal="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/skip"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/light_blue">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:layout_centerVertical="true"
                    android:text="@string/complete_profile_msg"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textNormal"
                        android:text="@string/name"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:padding="8dp"
                        style="@style/textNormal"
                        android:background="@drawable/light_blue_bg"
                        android:hint="@string/enter_your_name"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textNormal"
                        android:text="@string/lastname"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        style="@style/textNormal"
                        android:singleLine="true"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/light_blue_bg"
                        android:hint="@string/enter_your_last_name"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                style="@style/textNormal"
                android:layout_marginTop="10dp"
                android:text="@string/email"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginHorizontal="12dp"
                style="@style/textNormal"
                android:layout_marginTop="8dp"
                android:background="@drawable/light_blue_bg"
                android:hint="@string/enter_your_last_name"/>

          <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
              android:layout_marginTop="10dp"
              style="@style/textNormal"
              android:text="@string/mobile_number"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginHorizontal="12dp"
                style="@style/textNormal"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:background="@drawable/light_blue_bg"
                android:hint="+ 91 6283938982"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                style="@style/textNormal"
                android:text="@string/gender"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/light_blue_bg"
                android:orientation="horizontal"
                android:layout_marginHorizontal="12dp"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  Male"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginHorizontal="20dp"
                    android:checked="false"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="   Female"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:textSize="12sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                style="@style/textNormal"
                android:text="@string/date_of_birth"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/light_blue_bg"
                android:layout_marginHorizontal="12sp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/calender_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="dd/mm/yy"/>

                <ImageView
                    android:id="@+id/cal_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:tint="@color/appcolor"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/calendar"/>
            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_alignParentBottom="true"
                android:id="@+id/update_pro_btn"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_profile"
                android:layout_marginBottom="30dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/btn_bg"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</LinearLayout>