<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".home.setting.report.AddReportFragment">


    <RelativeLayout
        android:id="@+id/top_rl"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:layout_marginLeft="@dimen/space8"
            android:padding="@dimen/space10"
            android:layout_centerVertical="true"
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/black"
            android:src="@drawable/back_arrow"/>

        <ImageView
            android:visibility="gone"
            android:layout_marginRight="@dimen/space8"
            android:padding="@dimen/space10"
            android:layout_centerVertical="true"
            android:id="@+id/iv_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/white"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_baseline_search_24"/>

        <TextView
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/human"
            style="@style/textHeadingBold"
            android:textColor="@color/black"
            android:text="@string/profile"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space50"
            android:layout_marginHorizontal="@dimen/space16"
            android:background="@color/light_blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/text12"
                style="@style/textNormal"
                android:fontFamily="@font/human"
                android:text="@string/laywer_reports"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space10"
            android:layout_marginHorizontal="@dimen/space16"
            android:background="@color/light_blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/text12"
                style="@style/textNormal"
                android:fontFamily="@font/human"
                android:text="@string/architect_report"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space16"
            android:layout_marginTop="@dimen/space10"
            android:background="@color/light_blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/text12"
                style="@style/textNormal"
                android:fontFamily="@font/human"
                android:text="@string/phusy_report"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space16"
            android:layout_marginTop="@dimen/space10"
            android:background="@color/light_blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/text12"
                style="@style/textNormal"
                android:fontFamily="@font/human"
                android:text="@string/consul_reports"/>
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>