<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.consultant.CallFragment">



    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calling1"
            android:layout_marginTop="@dimen/text20"
            style="@style/textHeading"
            android:padding="@dimen/space10" />



        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="@dimen/space50"
            android:id="@+id/profile_image"
            android:layout_width="@dimen/space130"
            android:layout_height="@dimen/space130"
            android:src="@drawable/woman" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calling"
            style="@style/textHeading"
            android:padding="@dimen/space10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            style="@style/textHeading"
            android:paddingVertical="@dimen/space8" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="@dimen/space40"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_call"
            android:layout_margin="@dimen/space8"
            app:tint="@android:color/white"
            android:layout_width="@dimen/space60"
            android:layout_height="@dimen/space60"
            android:padding="@dimen/space15"
            android:background="@drawable/green_circle"
            android:src="@drawable/ic_phone_call_button" />

        <ImageView
            android:id="@+id/iv_endcall"
            android:layout_margin="@dimen/space8"
            app:tint="@android:color/white"
            android:layout_width="@dimen/space60"
            android:layout_height="@dimen/space60"
            android:padding="@dimen/space10"
            android:background="@drawable/red_circle"
            android:src="@drawable/ic_end_call_button" />

    </LinearLayout>


</RelativeLayout>